--- a/extension.toml
+++ b/extension.toml
@@ -1,7 +1,7 @@
-id = "material-icon-theme"
-name = "Material Icon Theme"
+id = "simple-icons-theme"
+name = "Simple Icons Theme"
 version = "0.1.0"
 schema_version = 1
-authors = ["Zed Industries <support@zed.dev>"]
-description = "Material Design icons."
-repository = "https://github.com/zed-extensions/material-icon-theme"
+authors = ["DvAndresGT <diegogiraldo506@gmail.com>"]
+description = "Default Simple  zed icons ."
+repository = "https://github.com/AndresGT/material-icon-theme-zed"
